# gobbledegook

./: LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
include/: Gobbledegook.h
src/: DBusInterface.cpp  DBusInterface.h  DBusMethod.cpp  DBusMethod.h  DBusObject.cpp  DBusObject.h  DBusObjectPath.h  GattCharacteristic.cpp  GattCharacteristic.h  GattDescriptor.cpp  GattDescriptor.h  GattInterface.cpp  GattInterface.h  GattProperty.cpp  GattProperty.h  GattService.cpp  GattService.h  GattUuid.h  Globals.h  Gobbledegook.cpp  HciAdapter.cpp  HciAdapter.h  HciSocket.cpp  HciSocket.h  Init.cpp  Init.h  Logger.cpp  Logger.h  Makefile.am  Makefile.in  Mgmt.cpp  Mgmt.h  Server.cpp  Server.h  ServerUtils.cpp  ServerUtils.h  TickEvent.h  Utils.cpp  Utils.h  standalone.cpp
